--- a/portfolio.html
+++ b/portfolio.html
@@ -66,7 +66,7 @@
                                         <div></div>
                                     </div>
                                     <p>URL : <a href="https://glass1201.github.io/boxed/."  target="_blank">https://glass1201.github.io/boxed/.</a></p>
-                                    <p>Description :<span>2차로 제작한 레쥬메 사이트입니다.</span></p>
+                                    <p>Description :<span>2차로 제작한 레쥬메 사이트입니다. 반응형으로 계속 업데이트 중입니다.</span></p>
                                 </div>
                             </div>
                             <div class="pf-list">
@@ -87,7 +87,7 @@
                                         <div></div>
                                     </div>
                                     <p>URL : <a href="https://glass1201.github.io/mobileDT/." target="_blank">https://glass1201.github.io/mobileDT/.</a></p>
-                                    <p>Description :<span>JSON 데이터 파일을 사용한 모바일&amp;태블릿PC 전용 웹사이트를 구현하였습니다.</span></p>
+                                    <p>Description :<span>JSON 데이터 파일을 사용한 모바일 &amp; 태블릿PC 전용 웹사이트를 구현하였습니다.</span></p>
                                 </div>
                             </div>
                             <div class="pf-list">
