--- a/about.html
+++ b/about.html
@@ -151,6 +151,18 @@
         $('.intro-txt02').addClass('on')
     })
 
+    // $('.click-me').toggleclass(
+    //     function(e){
+    //         e.preventDefault()
+    //         $('.intro-txt02').addClass('on')
+    //     },
+    //     function(e){
+    //         e.preventDefault()
+    //         $('.intro-txt02').removeClass('on')
+    //     }
+    // )
+
+
     // about 타이핑 효과
 
     var typingBool = false;
