--- a/join.html
+++ b/join.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ONON-PORTFOLIO</title>
+    <title>ONONON-PORTFOLIO</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
     <script src="js/slick.min.js"></script>
