--- a/skills.html
+++ b/skills.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ONON-PORTFOLIO</title>
+    <title>ONONON-PORTFOLIO</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
     <script src="js/slick.min.js"></script>
@@ -11,30 +11,6 @@
 <body>
     <div id="wrap">
         <header id="header">
-            <div class="topNavWrap">
-                <div class="topNav row">
-                    <div class="topNavlogo">
-                        <h1><a href="index.html">
-                            ONONON
-                        </a></h1>
-                    </div>
-                    <div class="navBar">
-                        <ul>
-                            <li><a href="about.html">ABOUT</a></li>
-                            <li><a href="portfolio.html">PORTFOLIO</a></li>
-                            <li class="on"><a href="skills.html">SKILLS</a></li>
-                            <li><a href="board.html">BOARD</a></li>
-                            <li><a href="contact.html">CONTACT</a></li>
-                        </ul>
-                    </div>
-                    <div class="loginMenu">
-                        <ul>
-                            <li><a href="login.html">LOGIN</a></li>
-                            <li><a href="join.html">JOIN</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
         </header>
         
         <section id="container">
@@ -77,9 +53,6 @@
         </section>
 
         <footer id="footer">
-            <div class="footer-info">
-                <p>&copy;All Rights Reserved by <span>design yami</span></p>
-            </div>
         </footer>
     </div>
 
