--- a/index.html
+++ b/index.html
@@ -50,16 +50,16 @@
                         </div>
                     </div>
                     <div class="article1-img">
-                        <a href="https://www.youtube.com/embed/yH07NZ5XBJI?mute=1&amp;autoplay=1&amp;rel=0">
-                            <i class="fab fa-youtube"></i>
+                        <a href="#">
+                            <i class="far fa-play-circle"></i>
                         </a>
                     </div>
                     <div class="video-outer">
                             <div class="video-inner">
-                                <iframe width="100%" height="100%" src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                <video autoplay muted loop src="images/main_video.mov"></video>
                                 <a href="#" class="video-close"><i class="fas fa-times"></i></a>
                             </div>
-                        </div>
+                    </div>
                 </div>
     
                 <div class="article2">
