--- a/portfolio.html
+++ b/portfolio.html
@@ -34,7 +34,7 @@
                                     </a>
                                 </div>
                                 <div class="pf-txt">
-                                    <h2>TITLE : <span>2차 레쥬메 사이트 - ONON</span></h2>
+                                    <h2>TITLE : <span>2차 레쥬메 사이트 - ONONON</span></h2>
                                     <div class="color color01">
                                         <div>Theme Color : </div>
                                         <div></div>
