--- a/portfolio.html
+++ b/portfolio.html
@@ -34,7 +34,7 @@
                                     </a>
                                 </div>
                                 <div class="pf-txt">
-                                    <h2>TITLE : <span>2차 레쥬메 사이트 - ONONON</span></h2>
+                                    <h2>TITLE : <span>레쥬메 사이트(반응형) - ONONON</span></h2>
                                     <div class="color color01">
                                         <div>Theme Color : </div>
                                         <div></div>
@@ -42,7 +42,7 @@
                                         <div></div>
                                     </div>
                                     <p>URL : <a href="https://glass1201.github.io/boxed/."  target="_blank">https://glass1201.github.io/boxed/.</a></p>
-                                    <p>Description :<span>2차로 제작한 레쥬메 사이트입니다. 반응형으로 계속 업데이트 중입니다.</span></p>
+                                    <p>Description :<span>저의 소개가 담겨 있는 레쥬메 사이트입니다. 반응형으로 제작하였습니다</span></p>
                                 </div>
                             </div>
                             <div class="pf-list">
