--- a/about.html
+++ b/about.html
@@ -148,7 +148,7 @@
     // click me
     $('.click-me').on('click',function(e){
         e.preventDefault()
-        $('.intro-txt02').fadeIn(300)
+        $('.intro-txt02').toggleClass('on')
     })
 
     // $('.click-me').toggleclass(
