--- a/index.html
+++ b/index.html
@@ -31,9 +31,8 @@
                         <div class="slide-inner">
                             <div class="slide01 slide">
                                 <div class="slide-txt">
-                                    <h2>S E R V I C E</h2>
-                                    <h3><span>You have the freedom and flexibility</span></h3>
-                                    <h3><span>to enjoy the game you love</span></h3>
+                                    <h2>A B O U T</h2>
+                                    <h3><span>CLICK the button and you will move to the page.</span></h3>
                                     <p>Our packages are designed to offer the golfer more choice, value and flexibility when it comes to golf memberships.</p>
                                     <a href="about.html">More View</a>
                                 </div>
@@ -41,8 +40,7 @@
                             <div class="slide02 slide">
                                 <div class="slide-txt">
                                     <h2>A B O U T</h2>
-                                    <h3><span>You have the freedom and flexibility</span></h3>
-                                    <h3><span>to enjoy the game you love</span></h3>
+                                    <h3><span>CLICK the button and you will move to the page.</span></h3>
                                     <p>Our packages are designed to offer the golfer more choice, value and flexibility when it comes to golf memberships.</p>
                                     <a href="about.html">More View</a>
                                 </div>
