--- a/about.html
+++ b/about.html
@@ -142,7 +142,7 @@
         e.preventDefault();
         var index = $(this).parent().index();
         $(this).parent().addClass('on').siblings().removeClass('on');
-        $('.about-info > div').eq(index).show().siblings().hide()
+        $('.about-info > div').eq(index).show().siblings().hide();
     })
 
     // click me
