--- a/header.html
+++ b/header.html
@@ -49,9 +49,9 @@
     })
     
      // nav li 불켜기
-     $('.rwd-wrap ul li a').on('click',function(){
-         $(this).parent().addClass('on').siblings().removeClass('on')
-     })
+    //  $('body').on('click','.rwd-wrap ul li a',function(){
+    //      $(this).parent().addClass('on')
+    //  })
      
 
     // 리사이즈 이벤트
