--- a/contact.html
+++ b/contact.html
@@ -88,4 +88,13 @@
 
     <script src="js/index.js"></script>
 </body>
+
+<script>
+    // li 에 불 켜기
+    $(window).load(
+        function(){
+            $('body .rwd-wrap ul li').eq(4).addClass('on')
+        }
+    )
+</script>
 </html>
