--- a/login.html
+++ b/login.html
@@ -56,4 +56,14 @@
 
     <script src="js/index.js"></script>
 </body>
+
+<script>
+
+    // li 에 불 켜기
+    $(window).load(
+        function(){
+            $('body .loginMenu ul li').eq(0).addClass('on')
+        }
+    )
+</script>
 </html>
