--- a/board.html
+++ b/board.html
@@ -83,4 +83,13 @@
 
     <script src="js/index.js"></script>
 </body>
+
+<script>
+    // li 에 불 켜기
+    $(window).load(
+        function(){
+            $('body .rwd-wrap ul li').eq(3).addClass('on')
+        }
+    )
+</script>
 </html>
