--- a/join.html
+++ b/join.html
@@ -98,4 +98,14 @@
 
     <script src="js/index.js"></script>
 </body>
+
+<script>
+
+    // li 에 불 켜기
+    $(window).load(
+        function(){
+            $('body .loginMenu ul li').eq(1).addClass('on')
+        }
+    )
+</script>
 </html>
