--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,7 @@
                             <div class="pf-list">
                                 <div class="pf-overlay-wrap">
                                     <a href="https://glass1201.github.io/boxed/." target="_blank">
-                                        <img src="images/portfolio01.PNG" alt="2차포트폴리오">
+                                        <img src="images/portfolio01.PNG" alt="레쥬메">
                                         <div class="pf-overlay">
                                             <i class="fas fa-arrow-right"></i>
                                         </div>
@@ -42,7 +42,7 @@
                                         <div></div>
                                     </div>
                                     <p>URL : <a href="https://glass1201.github.io/boxed/."  target="_blank">https://glass1201.github.io/boxed/.</a></p>
-                                    <p>Description :<span>저의 소개가 담겨 있는 레쥬메 사이트입니다. 반응형으로 제작하였습니다</span></p>
+                                    <p>Description :<span>저의 레쥬메 사이트입니다. 320px까지 반응형으로 제작하였지만 실제 모바일 화면으로 봤을때 부분적으로 깨지는 문제가 있어 지속적으로 수정 작업 중 입니다. 저의 소개와 이력이 담겨있는 about페이지, 포트폴리오 리스트를 한 번에 볼 수 있는 portfolio 페이지, skills, board, contact, login, join페이지가 있습니다</span></p>
                                 </div>
                             </div>
                             <div class="pf-list">
@@ -63,7 +63,7 @@
                                         <div></div>
                                     </div>
                                     <p>URL : <a href="https://glass1201.github.io/mobileDT/." target="_blank">https://glass1201.github.io/mobileDT/.</a></p>
-                                    <p>Description :<span>JSON 데이터 파일을 사용한 모바일 &amp; 태블릿PC 전용 웹사이트를 구현하였습니다.</span></p>
+                                    <p>Description :<span>평소에 좋아하는 캐릭터 브랜드 '다이노탱' 사이트의 상품 이지비, 가격 정보, 상품 정보를 활용하여 json데이터 파일을 만들어 768px 이하의 화면에서만 보이는 모바일 & 태블릿pc 전용 웹페이지를 구현하였습니다. 전체적으로 캐릭터에 맞는 귀여운 느낌으로 제작하였습니다.</span></p>
                                 </div>
                             </div>
                             <div class="pf-list">
@@ -83,7 +83,7 @@
                                         <div></div>
                                     </div>
                                     <p>URL : <a href="https://glass1201.github.io/mcdonald/." target="_blank">https://glass1201.github.io/mcdonald/.</a></p>
-                                    <p>Description :<span>리액트 프로그램을 활용하여 맥도날드 홈페이지를 간단하게 구현하였습니다.</span></p>
+                                    <p>Description :<span>리액트를 활용하여 맥도날드 사이트를 구현하였습니다. 리액트의 특성상 컴포넌트를 세분화하였고, 같은 컴포넌트 파일을 이용해 클릭한 탭에 따라 내용이 바뀌도록 하였습니다. 매장찾기 메뉴에 지도 api를 사용하여 매장 위치를 검색할 수 있는 기능을 추가할 예정입니다.</span></p>
                                 </div>
                             </div>
                             <div class="pf-list">
@@ -104,7 +104,7 @@
                                         <div></div>
                                     </div>
                                     <p>URL : <a href="https://glass1201.github.io/wdiz/." target="_blank">https://glass1201.github.io/wdiz/.</a></p>
-                                    <p>Description :<span>Wdiz 사이트를 참고하여 반응형 웹페이지를 구현하였습니다.</span></p>
+                                    <p>Description :<span>카페24 디자인센터의 Wdiz 사이트의 디자인을 참고하여 반응형 웹페이지를 구현하였습니다. 가장 처음 작업한 반응형 사이트여서 미흡한 점이 있어 지속적으로 수정 작업 중 입니다.</span></p>
                                 </div>
                             </div>
                         </div>
