--- a/portfolio.html
+++ b/portfolio.html
@@ -63,7 +63,7 @@
                                         <div></div>
                                     </div>
                                     <p>URL : <a href="https://glass1201.github.io/mobileDT/." target="_blank">https://glass1201.github.io/mobileDT/.</a></p>
-                                    <p>Description :<span>평소에 좋아하는 캐릭터 브랜드 '다이노탱' 사이트의 상품 이지비, 가격 정보, 상품 정보를 활용하여 json데이터 파일을 만들어 768px 이하의 화면에서만 보이는 모바일 & 태블릿pc 전용 웹페이지를 구현하였습니다. 전체적으로 캐릭터에 맞는 귀여운 느낌으로 제작하였습니다.</span></p>
+                                    <p>Description :<span>평소에 좋아하는 캐릭터 브랜드 '다이노탱' 사이트의 상품 이미지, 가격 정보, 상품 정보를 활용하여 json데이터 파일을 만들어 768px 이하의 화면에서만 보이는 모바일 & 태블릿pc 전용 웹페이지를 구현하였습니다. 전체적으로 캐릭터에 맞는 귀여운 느낌으로 제작하였습니다.</span></p>
                                 </div>
                             </div>
                             <div class="pf-list">
