--- a/portfolio.html
+++ b/portfolio.html
@@ -42,7 +42,7 @@
                                         <div></div>
                                     </div>
                                     <p>URL : <a href="https://glass1201.github.io/boxed/."  target="_blank">https://glass1201.github.io/boxed/.</a></p>
-                                    <p>Description :<span>저의 레쥬메 사이트입니다. 320px까지 반응형으로 제작하였지만 실제 모바일 화면으로 봤을때 부분적으로 깨지는 문제가 있어 지속적으로 수정 작업 중 입니다. 저의 소개와 이력이 담겨있는 about페이지, 포트폴리오 리스트를 한 번에 볼 수 있는 portfolio 페이지, skills, board, contact, login, join페이지가 있습니다</span></p>
+                                    <p>Description :<span>저의 레쥬메 사이트입니다. 320px까지 반응형으로 제작하였습니다. 저의 소개와 이력이 담겨있는 about페이지, 포트폴리오 리스트를 한 번에 볼 수 있는 portfolio 페이지, 각 프로그램 스킬치를 담은 skills 페이지와 board, contact, login, join페이지가 있습니다</span></p>
                                 </div>
                             </div>
                             <div class="pf-list">
