--- a/portfolio.html
+++ b/portfolio.html
@@ -83,7 +83,7 @@
                                         <div></div>
                                     </div>
                                     <p>URL : <a href="https://glass1201.github.io/mcdonald/." target="_blank">https://glass1201.github.io/mcdonald/.</a></p>
-                                    <p>Description :<span>리액트를 활용하여 맥도날드 사이트를 구현하였습니다. 리액트의 특성상 컴포넌트를 세분화하였고, 같은 컴포넌트 파일을 이용해 클릭한 탭에 따라 내용이 바뀌도록 하였습니다. 매장찾기 메뉴에 지도 api를 사용하여 매장 위치를 검색할 수 있는 기능을 추가할 예정입니다.</span></p>
+                                    <p>Description :<span>리액트를 활용하여 맥도날드 사이트를 구현하였습니다. 리액트의 특성상 컴포넌트를 세분화하였고, 같은 컴포넌트 파일을 이용해 클릭한 탭에 따라 내용이 바뀌도록 하였습니다. 매장찾기 메뉴에 카카오맵 지도 api를 사용하여 매장 위치를 검색할 수 있는 기능을 추가하였습니다.</span></p>
                                 </div>
                             </div>
                             <div class="pf-list">
